// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitPackService getHabitPack Positive: should return a habit pack 1`] = `
Object {
  "description": "Sweeter pack!",
  "description_video_url": "www.google.com",
  "id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
  "marketplace_approval_status": true,
  "marketplace_request": "requested",
  "pack_name": "Standalone Pack's Name",
  "pack_type": "standalone",
  "standalone_activities": Array [
    Object {
      "activity_type": "standalone_activity",
      "choice_type": "random",
      "choices": Array [
        Object {
          "activity_type": "standalone_activity",
          "duration_seconds": 300,
          "id": "3a9061fa-1cc1-43e9-a0ca-6cbfe6a4da80",
          "log_quantity": true,
          "log_summary_type": "SUM",
          "name": "Crunches",
          "video_urls": Array [
            "https://www.youtube.com/watch?v=ueSWOFxOZSc",
          ],
        },
      ],
      "duration_seconds": 300,
      "id": "b9501b80-1286-464a-b0be-5838f52e2ff8",
      "log_quantity": false,
      "log_summary_type": "SUM",
      "name": "Journaling",
      "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
      "video_urls": Array [],
    },
    Object {
      "activity_type": "standalone_activity",
      "choices": Array [],
      "duration_seconds": 300,
      "id": "b9501b60-1286-484a-b0be-5838f52e2ff9",
      "log_quantity": false,
      "log_summary_type": "SUM",
      "name": "Swimming",
      "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
      "video_urls": Array [],
    },
  ],
  "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
  "welcome_message": "Welcome to Focus Bear ya'll",
  "welcome_video_url": "www.youtube.com",
}
`;

exports[`HabitPackService getMultipleHabitPacks positive: should fetch habit packs 1`] = `
Array [
  Object {
    "description": "Sweeter pack!",
    "description_video_url": "www.google.com",
    "id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
    "marketplace_approval_status": true,
    "marketplace_request": "requested",
    "pack_name": "Standalone Pack's Name",
    "pack_type": "standalone",
    "standalone_activities": Array [
      Object {
        "activity_type": "standalone_activity",
        "choice_type": "random",
        "choices": Array [
          Object {
            "activity_type": "standalone_activity",
            "duration_seconds": 300,
            "id": "3a9061fa-1cc1-43e9-a0ca-6cbfe6a4da80",
            "log_quantity": true,
            "log_summary_type": "SUM",
            "name": "Crunches",
            "video_urls": Array [
              "https://www.youtube.com/watch?v=ueSWOFxOZSc",
            ],
          },
        ],
        "duration_seconds": 300,
        "id": "b9501b80-1286-464a-b0be-5838f52e2ff8",
        "log_quantity": false,
        "log_summary_type": "SUM",
        "name": "Journaling",
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "video_urls": Array [],
      },
      Object {
        "activity_type": "standalone_activity",
        "choices": Array [],
        "duration_seconds": 300,
        "id": "b9501b60-1286-484a-b0be-5838f52e2ff9",
        "log_quantity": false,
        "log_summary_type": "SUM",
        "name": "Swimming",
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "video_urls": Array [],
      },
    ],
    "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
    "welcome_message": "Welcome to Focus Bear ya'll",
    "welcome_video_url": "www.youtube.com",
  },
  Object {
    "break_activities": Array [
      Object {
        "activity_type": "break_activity",
        "allowed_apps": Array [],
        "allowed_urls": Array [],
        "choice_type": "random",
        "choices": Array [],
        "duration_seconds": 30,
        "id": "630c921d-dc9c-4107-acd2-023d7930d9bf",
        "include_in_every_break": true,
        "is_office_friendly": false,
        "log_quantity": false,
        "log_quantity_question": "",
        "log_summary_type": "SUM",
        "name": "Micro-workout",
        "pack_id": "34dd7441-16f9-4772-be6c-416f9af5689b",
        "video_urls": Array [],
      },
    ],
    "description": "Test 12/10/22 12:27.",
    "description_video_url": "www.google.com",
    "evening_activities": Array [
      Object {
        "activity_type": "evening_activity",
        "choices": Array [],
        "duration_seconds": 150,
        "id": "f3dbeeb2-9284-4d39-bbd4-04cc17d40b4e",
        "log_quantity": false,
        "log_summary_type": "SUM",
        "name": "Mess up desk",
        "pack_id": "34dd7441-16f9-4772-be6c-416f9af5689b",
        "video_urls": Array [],
      },
    ],
    "id": "34dd7441-16f9-4772-be6c-416f9af5689b",
    "marketplace_approval_status": false,
    "marketplace_request": "requested",
    "morning_activities": Array [
      Object {
        "activity_type": "morning_activity",
        "choices": Array [],
        "duration_seconds": 300,
        "id": "b24c9383-f8a0-409c-bbd9-e37b9566de3b",
        "log_quantity": false,
        "log_summary_type": "SUM",
        "name": "Yoga",
        "pack_id": "34dd7441-16f9-4772-be6c-416f9af5689b",
        "video_urls": Array [
          "https://www.youtube.com/watch?v=nz5MCv0sFDA",
          "https://www.youtube.com/watch?v=oexYiIy75V8",
        ],
      },
    ],
    "pack_name": "Best routine pack",
    "pack_type": "routine",
    "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
    "welcome_message": "Welcome to Focus Bear!",
    "welcome_video_url": "www.youtube.com",
  },
]
`;

exports[`HabitPackService serializeHabitPack Positive: should return serialized pack 1`] = `
Object {
  "description": "This is a great pack",
  "description_video_url": "www.youtube.com",
  "id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
  "marketplace_approval_status": true,
  "marketplace_request": "unrequested",
  "pack_name": "Standalone Pack's Name",
  "pack_type": "standalone",
  "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
  "welcome_message": "Welcome to Focus Bear",
  "welcome_video_url": "www.youtube.com",
}
`;
